TP-1411 Fix too large z-index values

--- a/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
+++ b/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
@@ -104,7 +104,6 @@ article ul {
      background: $blue130;
      border-radius: 54%;
      position: absolute;
-     z-index: 100;
      left: -15px;
      top: 10px;
      text-align: center;
